demo in main()